新增 设置页面和反馈页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,14 @@
             android:name=".search.SearchResourcesActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".settings.SettingsActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".feedback.FeedbackActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
