--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,10 @@ android {
     }
 
     productFlavors {
-        googlePlay {}
+        googlePlay {
+            applicationId "com.github.xtorrent.xtorrent.dev"
+            resValue "string", "app_name", "X 磁力搜索"
+        }
     }
 }
 
