--- a/app/build.gradle
+++ b/app/build.gradle
@@ -188,3 +188,30 @@ dependencies {
     })
     testCompile 'junit:junit:4.12'
 }
+
+//def appModuleRootFolder = '.'
+//def srcDir = 'src'
+//def googleServicesJson = 'google-services.json'
+//
+//task switchToDebug(type: Copy) {
+//    def buildType = 'debug'
+//    description = 'Switches to DEBUG google-services.json'
+//    from "${srcDir}/${buildType}"
+//    include "$googleServicesJson"
+//    into "$appModuleRootFolder"
+//}
+//
+//task switchToRelease(type: Copy) {
+//    def buildType = 'release'
+//    description = 'Switches to RELEASE google-services.json'
+//    from "${srcDir}/${buildType}/"
+//    include "$googleServicesJson"
+//    into "$appModuleRootFolder"
+//}
+//
+//afterEvaluate {
+//    processGooglePlayDebugGoogleServices.dependsOn switchToDebug
+//    processGooglePlayReleaseGoogleServices.dependsOn switchToRelease
+//}
+
+apply plugin: 'com.google.gms.google-services'
