--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,12 +125,12 @@ repositories {
 }
 
 buildscript {
-    ext.support_version = '25.1.1'
+    ext.support_version = '25.2.0'
     ext.okhttp_version = '3.4.1'
     ext.retrofit_version = '2.1.0'
     ext.rxlifecycle_version = '0.6.1'
     ext.rxbinding_version = '0.4.0'
-    ext.kotlin_version = '1.0.6'
+    ext.kotlin_version = '1.1.0'
     ext.dagger_version = '2.2'
     ext.autovalue_version = '1.2'
     ext.leakcanary_version = '1.5'
@@ -147,8 +147,8 @@ buildscript {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:design:$support_version"
+    compile "com.android.support:cardview-v7:$support_version"
     compile 'com.android.support:multidex:1.0.1'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
